syn-state-machine/src/common_tokens/snapshots/syn_state_machine__common_tokens__enumerations__tests__it_matches_enum_item_tuple.snap
---
source: syn-state-machine/src/common_tokens/enumerations.rs
expression: "crate::parse::<EnumItem<Infallible, Ident>>(::quote::quote! { Block(World) })"
---
Ok(
    (
        Tuple {
            id: Ident(
                Block,
            ),
            attrs: [],
            tuple: InterlaceTrail(
                [
                    TupleField {
                        attr: [],
                        vis: None,
                        ty: Ident(
                            World,
                        ),
                    },
                ],
                [],
            ),
            vis: None,
            desc: None,
        },
        0,
    ),
)
